<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/streamImage"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/streamStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@+id/streamImage"
        android:gravity="center|left"
        android:singleLine="true"
        android:text="@string/stream_archive"
        android:textColor="@color/live_video_red"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/streamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:layout_toRightOf="@+id/streamImage"
        android:layout_below="@id/streamStatus"
        android:gravity="center|left"
        android:singleLine="false"
        android:text="@string/name_fake"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/streamDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_padding"
        android:paddingRight="@dimen/list_padding"
        android:layout_below="@+id/streamName"
        android:layout_toRightOf="@id/streamImage"
        android:gravity="center|left"
        android:maxHeight="30dp"
        android:maxLines="4"
        android:maxWidth="300dp"
        android:singleLine="false"
        android:text="@string/description_fake"
        android:textColor="@color/secondary_text"
        android:textSize="12sp" />

</RelativeLayout>