<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey_background">
            <include
                android:id="@+id/toolbar"
                layout="@layout/main_toolbar"/>
            <RelativeLayout
                android:layout_below="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_margin"
                android:background="@drawable/list_item">

                <TextView
                    android:id="@+id/type_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text=""
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/type_str"
                    android:layout_marginLeft="@dimen/list_padding"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text=""
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/inst_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding"
                    android:layout_below="@+id/type_str"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/institution"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/inst_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/inst_str"
                    android:layout_marginLeft="@dimen/list_padding"
                    android:layout_below="@+id/type_str"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/institution_fake"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/contact_name_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inst_str"
                    android:layout_marginBottom="@dimen/list_padding"
                    android:gravity="left"
                    android:fontFamily="sans-serif"
                    android:text="@string/contact"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/contact_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inst_str"
                    android:layout_toRightOf="@+id/contact_name_str"
                    android:layout_toLeftOf="@+id/email_button"
                    android:layout_alignLeft="@+id/inst_label"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/name_fake"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inst_str"
                    android:layout_marginRight="@dimen/list_padding"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:text="@string/send_email"
                    android:textColor="@color/accent_color"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/web_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_name_str"
                    android:layout_marginBottom="@dimen/list_padding"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/website"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/web_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_name_str"
                    android:layout_alignLeft="@+id/inst_label"
                    android:layout_toRightOf="@+id/web_str"
                    android:layout_toLeftOf="@+id/web_button"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text=""
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/web_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_name_str"
                    android:layout_marginRight="@dimen/list_padding"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:text="@string/career_web_button"
                    android:textColor="@color/accent_color"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/content_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_padding"
                    android:layout_below="@+id/web_str"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="content"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>